<resources>
    <string name="app_name">Shmelev_v6</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">From the Square world,\nHello, %1$s!</string>
    <string name="add_to_list">Добавить в список</string>
    <string name="relax">Развитие и релакс</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="enter_to_next_activity">Войти</string>
    <string name="description">Расслабьтесь, и отдохните - массажи очень полезны</string>
    <string name="choose_massage">Пункт массажа</string>
    <string name="list_text">1. Массаж шеи\n2. Массаж с медом\n3. Массаж гуава</string>
</resources>